--- a/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/index.html
@@ -1,33 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Stats preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./images/favicon-32x32.png" type="image/x-icon">
+    <link rel="stylesheet" href="./style.css">
+    <title>BLOCK-CHAIN UNN</title>
 </head>
 <body>
+    <div  class="container">
+        <div class="text-container">  
+            <div>
+                <h2> Get <span id="insight"> insight</span> than help your business grow</h2></div>
+            
+            <p> discover the benefit of data analytics and make better decision regarding revenue, customer experience and overall effiency.</p>
+           <div class="stats-heading"> 
+            <div id="companies"> 
+                <h2 id="stats-heading">10K+</h2>
+                <p id="para"> COMPANIES</p>
+            </div>
+            <div id="templates">
+                <h2 id="stats-heading">314</h2>
+                <p id="para"> TEMPLATES</p>
+            </div>
+            <div id="queries">
+                <h2 id="stats-heading">12M+</h2>
+                <p id="para">QUERIES</p>
+            </div>
+        </div>
 
-  Get insights that help your business grow.
+        </div>
+        <div class="image-container"> <div class="overlay"> </div></div>
 
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
 
-  10k+ companies
-  314 templates
-  12m+ queries
+ </div>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+ <footer class="footer"> 
+    <div>
+        challange by <a href="kingdavid">link</a>
+        coded by <a href="king david"> kingdavid</a>
+    </div>
+ </footer>
+    
 </body>
 </html>
